<resources>
    <string name="app_name" translatable="false">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="media_library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="switch_button_description">Выбор</string>
    <string name="back_description">Назад</string>
    <string name="share_description">Поделиться приложением</string>
    <string name="support_description">Написать в поддержку</string>
    <string name="terms_of_use_description">Пользовательское соглашение</string>
    <string name="dark_theme">Тёмная тема</string>
    <string name="message_to_developers">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="thank_to_developers">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="email_recipient" translatable="false">arrsamarina@yandex.ru</string>
    <string name="share_message" translatable="false">https://practicum.yandex.ru/profile/android-developer/</string>
    <string name="share_via">Поделиться через</string>
    <string name="no_email_client_found">Почтовый клиент не найден</string>
    <string name="activity_settings_name" translatable="false">SettingsActivity</string>
    <string name="terms_url" translatable="false">https://yandex.ru/legal/practicum_offer/</string>



</resources>