<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/colorPrimary"
    android:paddingStart="4dp"
    android:paddingTop="4dp">

    <androidx.appcompat.widget.Toolbar
        style="@style/GeneralTitle">
        <TextView
            style="@style/GeneralTitleText"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:layout_marginStart="@dimen/medium_margin"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="@dimen/margin" />
    </androidx.appcompat.widget.Toolbar>
    <Button
        app:icon="@drawable/ic_search"
        style="@style/MainMenuButton"
        android:text="@string/search"
        android:id="@+id/button_search"
        />
    <Button
        app:icon="@drawable/ic_library"
        android:text="@string/media_library"
        style="@style/MainMenuButton"
        android:id="@+id/button_media"/>
    <Button
        app:icon="@drawable/ic_settings"
        android:text="@string/settings"
        style="@style/MainMenuButton"
        android:id="@+id/button_settings"/>


</LinearLayout>