<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:backgroundTint="@color/white"
    tools:context=".SettingsActivity">
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin"
        android:layout_margin="4dp"
        >
        <ImageButton
            android:id="@+id/back"
            android:layout_width="@dimen/big_image_button"
            android:layout_height="@dimen/big_image_button"
            android:backgroundTint="@color/white"
            android:src="@drawable/ic_arrowback"
            android:contentDescription="@string/back_description"
            android:adjustViewBounds="true"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textSize="22dp"
            android:paddingStart="12dp"
            android:textColor="@color/black"/>

    </androidx.appcompat.widget.Toolbar>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_paragraph_height"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin"
        android:paddingEnd="6dp"
        android:paddingStart="@dimen/settings_start"
        >
        <Switch
            android:text="@string/dark_theme"
            android:id="@+id/themeSwitcher"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:textSize="@dimen/text_size"
            tools:ignore="UseSwitchCompatOrMaterialXml"
            />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_paragraph_height"
        android:orientation="horizontal"
        android:paddingEnd="@dimen/linear_padding_end">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/settings_start"
            android:text="@string/share_description"
            android:textSize="@dimen/text_size"
            android:textColor="@color/black"
            android:layout_weight="1"/>
        <ImageView
            android:layout_width="@dimen/image_icon_view"
            android:layout_height="@dimen/image_icon_view"
            android:src="@drawable/ic_share"
            android:layout_gravity="center"
            android:padding="@dimen/image_settings_padding"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_paragraph_height"
        android:orientation="horizontal"
        android:paddingEnd="@dimen/linear_padding_end">

        <TextView
            android:layout_width="@dimen/null_size"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/settings_start"
            android:text="@string/support_description"
            android:textSize="@dimen/text_size"
            android:textColor="@color/black" />
        <ImageView
            android:layout_width="@dimen/image_icon_view"
            android:layout_height="@dimen/image_icon_view"
            android:src="@drawable/ic_helper"
            android:layout_gravity="center"
            android:padding="@dimen/image_settings_padding"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_paragraph_height"
        android:orientation="horizontal"
        android:paddingEnd="@dimen/linear_padding_end">

        <TextView
            android:layout_width="@dimen/null_size"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/settings_start"
            android:text="@string/terms_of_use_description"
            android:textSize="@dimen/text_size"
            android:textColor="@color/black"/>
        <ImageView
            android:layout_width="@dimen/image_icon_view"
            android:layout_height="@dimen/image_icon_view"
            android:src="@drawable/ic_forward"
            android:layout_gravity="center"
            android:padding="@dimen/image_settings_padding"/>
    </LinearLayout>

</LinearLayout>
